gccida/g0/get_true_reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_true_reg/src/reg-stack.c:1048:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)subreg 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_true_reg/src/reg-stack.c:1051:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)*pat + 2))] 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_true_reg/src/obj/reg-stack.o] Error 1
